# deal-ii-lab1

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  run.sh  search.html  searchindex.js  step-49.html  step-53.html
.github/classroom/: autograding.json
.github/workflows/: book.yml  pages.yml
_sources/: intro.md  notebooks.ipynb  step-53.ipynb
deal-ii-lab1-book/: _toc.yml  notebooks.ipynb  point.ipynb  pyproject.toml  step-49.ipynb  step-53.ipynb
python/: README.md  main.py  step-62.ipynb
source/: CMakeLists.txt  main.cc  point_tests.hh
